src/assets/styles/main.css
/* ... */
#address {
  width: 353px;
}

#category,
#privacy {
  width: 360px;
}

#description {
  border: 2px solid var(--blue);
  display: inline-block;
  padding-left: 14%;
  padding-right: 14.6%;
  padding-top: 1%;
  padding-bottom: 1%;
}

.postit {
  width: 100px;
  height: 30px;
  float: right;
  margin-left: 10px;
}

.postit:hover {
  transform: scale(1.1);
  background-color: #06bdb6;
}

.cancelit {
  width: 100px;
  height: 30px;
  float: right;
  color: red;
  border: 2px solid red;
}

.cancelit:hover {
  transform: scale(1.1);
  background-color: red;
  color: white;
}

.displayCenter {
  display: inline-block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

.float {
  float: right;
  height: 50px;
}

.create {
  margin-left: auto;
  margin-right: auto;
  color: var(--grey);
  text-align: center;
}

.imageUpload {
  margin-left: auto;
  margin-right: auto;
  position: justify;
  /*color: white; (this would have been the colour of the text present for the upload image link for a Bit64 upload*/
  text-align: auto;
}

.centerMessaging {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: black;
  font-size: 200%;
  font-weight: bold;
  width: 100%;
  height: 13%;
  text-align: center;
}

/*CSS for About Info Page*/

#contactHead {
  padding-top: 60px;
  color: black;
}

.container {
  padding-top: 100px;
  position: absolute;
  text-align: center;
  color: white;
}

.centerAboutMessage {
  position: absolute;
  top: 15%;
  left: 10%;
  color: palegoldenrod;
  font-size: 300%;
  font-weight: bold;
}

.about p {
  margin-bottom: 50px;
}

.createEvent {
  background-color: #08bdb6;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #303030;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 50px;
  padding-right: 50px;
}

.createEvent:hover {
  background-color: #48b1bf;
}

.about {
  padding-top: 100px;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 50px;
}

/* .CoverContainer {
  position: relative;
  display: inline-block;
  width: 100vw;
} */

.cover-image {
  width: 100vw;
  margin-top: 0;
  object-fit: cover;
  height: 500px;
}
.ContactUs {
  padding-top: 50px;
  margin-bottom: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}
.ContactHeader {
  text-align: left;
  font-size: 40pt;
}

.JoinUsButton {
  background-color: #06beb6;
  color: #303030;
  padding: 10px;
  font-weight: 700;
  border: 1px solid #06beb6;
  margin-top: 30px;
  align-items: left;
  margin-left: 10%;
  margin-right: 10%;
}
.JoinUsButton:hover {
  background-color: #48b1bf;
  border: 1px solid #48b1bf;
  padding: 10px;
  color: #303030;
}

#aboutImage {
  padding-bottom: 50px;
}

/*CSS for profile page*/
#logoutProfile:hover {
  background-color: #48b1bf;
  transform: scale(1.1);
}

#updateProfile:hover {
  background-color: #48b1bf;
  transform: scale(1.1);
}

.profileHR {
  margin-top: 23em;
  border-top: 2px solid #48b1bf;
}

.ProfileImageContainer {
  margin-top: 100px;
}

.ProfileImage {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: 1px solid black;
  margin-left: 5%;
  margin-top: -10%;
}

.updateProfileImage {
  width: 150px;
  background-color: white;
  border: 1px solid #06beb6;
  padding: 10px;
  margin-top: 10px;
  margin-left: 0%;
  float: left;
}

.profileDetails {
  flex-direction: column;
  float: right;
  margin-top: -15%;
  margin-right: 17%;
}

.ProfileEvents {
  padding-top: 360px;
}

.submitBio {
  background-color: white;
  border: 1px solid #06beb6;
  padding: 10px;
  width: 50%;
  padding: 10px;
}
.LogOutBtn {
  background-color: #06beb6;
  border: 10px solid #06beb6;
  color: #303030;
  padding: 10px;
  width: 50%;
}

.profile {
  padding-top: 200px;
  text-align: justify;
  margin-left: 20%;
  margin-right: 20%;
}

.profileBio {
  height: 100px;
  margin-bottom: 10px;
  border: 1px solid #303030;
  padding: 10px;
}

.profileUserName {
  margin-bottom: 10px;
  border: 1px solid #303030;
  padding: 10px;
}

.ProfileTabs {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.ProfileTabButtons {
  background-color: white;
  border: none;
  font-size: 22pt;
  margin-bottom: 30px;
  border-bottom: 1px solid #303030;
  cursor: pointer;
}

.ProfileTabButtons:active {
  color: #06beb6;
  border-bottom: 1px solid #06beb6;
}

.ProfileNotParticipating {
  font-size: 13pt;
  text-align: center;
  font-weight: 400;
  padding-top: 20px;
  padding-bottom: 30px;
}

.ProfileExploreButtons {
  background-color: white;
  border: 1px solid #06beb6;
  padding: 10px;
  width: 80%;
  font-weight: 500;
  margin-bottom: 10px;
  align-items: center;
  margin-bottom: 20px;
}

/*CSS for Registration Page*/
* {
  margin: 0;
  padding: 0;
}

.register {
  padding-top: 300px;
  text-align: left;
  margin-left: 25%;
  margin-right: 25%;
}

.registerForm {
  border: none;
}

.registerForm__container {
  padding: 16px;
  border: none;
}

.registerFormInput {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  box-sizing: border-box;
}

#submitSignUp {
  background-color: #08bdb6;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #303030;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 100%;
}

#submit:hover {
  background-color: #48b1bf;
}

.SignUpBtn {
  color: #303030;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  text-decoration: underline;
  width: auto;
  padding: 10px 18px;
  background-color: transparent;
}

.SignUpBtn:hover {
  color: #303030;
  width: auto;
  padding: 10px 18px;
  background-color: transparent;
}
/* ... */

